--- a/ChampStats/Base.lproj/Main.storyboard
+++ b/ChampStats/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ChampStats" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,85 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P3f-KK-4OP">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="65"/>
+                                <color key="backgroundColor" red="1" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="65" id="bOF-5E-qXr"/>
+                                </constraints>
+                            </view>
+                            <searchBar contentMode="redraw" barStyle="blackTranslucent" searchBarStyle="minimal" translatesAutoresizingMaskIntoConstraints="NO" id="80C-TY-k27">
+                                <rect key="frame" x="0.0" y="65" width="375" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="cG1-Iu-Stq"/>
+                                </constraints>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <imageView userInteractionEnabled="NO" alpha="0.10000000000000001" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BG_Ring" translatesAutoresizingMaskIntoConstraints="NO" id="er9-J4-UGt">
+                                <rect key="frame" x="0.0" y="115" width="375" height="552"/>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.80000000000000004" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="l6R-QK-167">
+                                <rect key="frame" x="36" y="135" width="303" height="512"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ybw-3W-acZ">
+                                    <size key="itemSize" width="144" height="65"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="xTl-M8-V0q">
+                                        <rect key="frame" x="0.0" y="0.0" width="144" height="65"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="144" height="65"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1 X Champions" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HrE-PX-QQV">
+                                                    <rect key="frame" x="8" y="8" width="128" height="49"/>
+                                                    <fontDescription key="fontDescription" name="AvenirNextCondensed-DemiBold" family="Avenir Next Condensed" pointSize="21"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <color key="backgroundColor" red="0.99989169840000003" green="1" blue="0.99988096950000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="tintColor" red="0.047813691198825836" green="0.01563350111246109" blue="0.011225162073969841" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <constraints>
+                                            <constraint firstItem="HrE-PX-QQV" firstAttribute="top" secondItem="xTl-M8-V0q" secondAttribute="topMargin" id="1y8-TS-5qz"/>
+                                            <constraint firstItem="HrE-PX-QQV" firstAttribute="leading" secondItem="xTl-M8-V0q" secondAttribute="leadingMargin" id="MnM-WX-Ocr"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="HrE-PX-QQV" secondAttribute="trailing" id="s7n-dN-YdX"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="HrE-PX-QQV" secondAttribute="bottom" id="ssA-di-72p"/>
+                                        </constraints>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="80C-TY-k27" firstAttribute="top" secondItem="P3f-KK-4OP" secondAttribute="bottom" id="2mu-Pn-KeU"/>
+                            <constraint firstItem="P3f-KK-4OP" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="4UC-bT-AiO"/>
+                            <constraint firstItem="80C-TY-k27" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Ghe-qQ-gZJ"/>
+                            <constraint firstItem="er9-J4-UGt" firstAttribute="top" secondItem="80C-TY-k27" secondAttribute="bottom" id="QPQ-NN-g6a"/>
+                            <constraint firstAttribute="trailing" secondItem="80C-TY-k27" secondAttribute="trailing" id="TE4-Hr-8ot"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="er9-J4-UGt" secondAttribute="bottom" id="YSX-4O-r7Z"/>
+                            <constraint firstItem="P3f-KK-4OP" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="abY-iS-H4I"/>
+                            <constraint firstItem="l6R-QK-167" firstAttribute="top" secondItem="80C-TY-k27" secondAttribute="bottom" constant="20" id="blG-ql-N92"/>
+                            <constraint firstItem="er9-J4-UGt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="dUg-Qf-70B"/>
+                            <constraint firstItem="l6R-QK-167" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="nOT-Ue-mHN"/>
+                            <constraint firstAttribute="trailing" secondItem="er9-J4-UGt" secondAttribute="trailing" id="vGU-st-Ibh"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="l6R-QK-167" secondAttribute="bottom" constant="20" id="vNc-We-gRw"/>
+                            <constraint firstAttribute="trailing" secondItem="P3f-KK-4OP" secondAttribute="trailing" id="vXO-wl-0Ar"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="l6R-QK-167" secondAttribute="trailing" constant="20" id="yjE-vP-q2C"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="32.799999999999997" y="43.628185907046479"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="BG_Ring" width="472" height="255"/>
+    </resources>
 </document>
